2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* docs/Makefile.am:
	* docs/fr/*: add french translation by Christophe Bliard
	<christophe.bliard@trux.info>
	* docs/*: .cvsignore love

2005-01-07  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.c: allow stickynotes to remember their position and size
	  correctly. Fixes #316305. Patch from André Martins
	  <almar@mega.ist.utl.pt>.

2005-12-22  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.c:
	- fix for #323929, ensures default titles are UTF-8'ed. Based on a
	  patch from Ryuichi Arafune.

2005-11-15  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes_applet_callbacks.c: Patch for #310370 from
	  Jaap A. Haitsma <jaap@haitsma.org>.
	* stickynotes.c:
	* stickynotes_applet.c:
	* stickynotes_applet_callbacks.[ch]: cleanups from Kjartan Maraas.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-01  Davyd Madeley  <davyd@madeley.id.au>

	* docs/C/stickynotes_applet.xml:
	* docs/C/figures/stickynote-left-menu.png:
	* docs/C/figures/stickynote-right-menu-lock.png:
	* docs/C/figures/stickynote-right-menu-new.png:
	* docs/C/figures/stickynote-right-menu.png:
	* docs/C/figures/stickynotes_applet.png: documentation updated for
	  sticky notes

2005-08-20  Davyd Madeley  <davyd@madeley.id.au>

	* stickynotes.c: Fix gcc 4.0 warnings. Patch from Jaap A. Haitsma
	<jaap@haitsma.org>.

2005-08-11  Sebastien Bacher  <seb128@debian.org>

	* stickynotes.c: (stickynote_new):
	hide the property dialog instead of closing it (Closes: #310618).

2005-07-20  Davyd Madeley  <davyd@madeley.id.au>

	* docs/Makefile.am:
	* docs/stickynotes_applet.omf.in:
	* docs/C/stickynotes_applet.xml: gnome-doc-utilise

	* docs/: remove unwanted gumpf

2005-07-13  Olav Vitters  <olav@bkor.dhs.org>

	* docs/C/stickynotes_applet.xml:
	* docs/uk/stickynotes_applet.xml:

	Correct duplicate XML id and change one instance of