@@ -2,6 +2,7 @@
     <popups>
 	<popup name="button3">
 	    <menuitem name="new_note" verb="new_note" _label="_New Note" pixtype="stock" pixname="gtk-new"/>
+	    <menuitem name="hide_notes" verb="hide_notes" _label="Hi_de Notes"/>
 	    <menuitem name="lock" verb="lock" _label="_Lock Notes" type="toggle" id="lock"/>
 	    <menuitem name="destroy_all" verb="destroy_all" _label="_Delete Notes" pixtype="stock" pixname="gtk-delete"/>
 	    <separator/>
