@@ -1,3 +1,11 @@
+2006-01-15  Davyd Madeley  <davyd@madeley.id.au>
+
+	* GNOME_StickyNotesApplet.xml:
+	* stickynotes_applet.c:
+	* stickynotes_applet_callbacks.c:
+	* stickynotes_applet_callbacks.h: add Hide Notes to the menu. Patch
+	  from Jaap A. Haitsma <jaap@haitsma.org>. Closes #310246.
+
 2006-01-07  Vincent Untz  <vuntz@gnome.org>
 
 	* docs/Makefile.am:
